# lunicyto

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
config/: train.toml  train_baseline.toml
src/lunicyto/: cli.py  logger.py
src/lunicyto/datasets/: __init__.py  sipakmed.py  sipakmed_set.py
src/lunicyto/models/: __init__.py  baseline.py  hybrid_vit_cnn.py
src/lunicyto/training/: __init__.py  early_stopping.py  metrics.py  trainer.py  trainer_bkp.py
src/lunicyto/utils/: __init__.py  cross_validate.py  download_data.py  explore.py  models.py  train.py
thesis/: main_v1_en.tex  main_v1_ru.tex
