[project]
name = "lunicyto"
version = "0.1.0"
description = "A. Maskaev Diploma work"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kaggle>=1.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typer>=0.9.0",
]

[project.scripts]
lunicyto = "lunicyto.cli:main"
