[project]
name = "lunicyto"
version = "0.4.0"
description = "A. Maskaev Diploma work"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kaggle>=1.5.0",
    "marimo>=0.23.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typer>=0.9.0",
]

[project.scripts]
lunicyto = "lunicyto.cli:main"

[dependency-groups]
dev = ["ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "old/",
    "src/datasets/",
    "**/*_bkp.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B"]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["lunicyto"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
