[project]
name = "lunicyto"
version = "0.4.4"
description = "A. Maskaev Diploma work"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kaggle>=1.5.0",
    "marimo>=0.23.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typer>=0.9.0",
]

[project.scripts]
lunicyto = "lunicyto.cli:main"

[dependency-groups]
dev = ["ruff>=0.4.0"]

# ---------------------------------------------------------------------------
# PyTorch CUDA wheels
# On Linux / Windows uv pulls torch + torchvision from the PyTorch CUDA 12.4
# index instead of PyPI (which ships CPU-only builds).
# On macOS the default PyPI wheels are used — they already support MPS.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "old/",
    "src/datasets/",
    "**/*_bkp.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B"]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["lunicyto"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
